--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -50,7 +50,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../BIM_Workbench.html" title="BIM Workbench">Banco de Traballo BIM(Building Information Modelling)</a> para traballar con elementos arquitect&oacute;nicos e crear modelos <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a>. Combina o Banco de traballo en arco e o  Banco de Traballo BIM anteriormente externo dispo&ntilde;ible en <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../CAM_Workbench.html" title="CAM Workbench">Banco de Traballo CAM</a> (Computer Aided Manufacturing) &eacute; usado para producir instrucci&oacute;ns de G-Code. Este Banco de Traballo era chamado "Path Workbench" en <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Draft_Workbench.html" title="Draft Workbench">Banco de traballo Borrador</a> (Draft) cont&eacute;n ferramentas en 2D e operaci&oacute;ns b&aacute;sicas de CAD 2D e 3D.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_FEM.svg&amp;filetimestamp=20240405093343&amp;.html" class="mw-file-description"><img src="../File/Workbench_FEM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../FEM_Workbench.html" title="FEM Workbench">FEM Workbench</a> provides Finite Element Analysis (FEA) workflow.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_FEM.svg&amp;filetimestamp=20240405093343&amp;.html" class="mw-file-description"><img src="../File/Workbench_FEM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../FEM_Workbench.html" title="FEM Workbench">Banco de Traballo FEM</a> proporciona un fluxo de traballo de an&aacute;lise de elementos finitos (FEA).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Inspection_Workbench.html" title="Inspection Workbench">Inspection Workbench</a> is made to give you specific tools for examination of shapes. Still in the early stages of development. <code>D</code></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Material.svg&amp;filetimestamp=20240623140009&amp;.html" class="mw-file-description"><img src="../File/Workbench_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Material_Workbench.html" title="Material Workbench">Material Workbench</a> handles the FreeCAD material system. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Mesh.svg&amp;filetimestamp=20200404173024&amp;.html" class="mw-file-description"><img src="../File/Workbench_Mesh.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> for working with triangulated meshes.</li></ul>
@@ -90,12 +90,12 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115173730
+Cached time: 20260115173814
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.107 seconds
-Real time usage: 0.194 seconds
+CPU time usage: 0.116 seconds
+Real time usage: 0.211 seconds
 Preprocessor visited node count: 221/1000000
 Post&#8208;expand include size: 2305/2097152 bytes
 Template argument size: 414/2097152 bytes
@@ -106,17 +106,17 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.095      1 -total
- 23.56%    3.557      1 Template:Button
- 21.93%    3.311      1 Template:Userdocnavi/gl
- 16.12%    2.433      2 Template:Docnav
-  8.58%    1.296      3 Template:Version
-  8.53%    1.287      2 Template:VersionMinus
-  8.17%    1.233      5 Template:Incode
-  7.43%    1.122      1 Template:MenuCommand
+100.00%   10.860      1 -total
+ 19.06%    2.070      2 Template:Docnav
+ 13.99%    1.519      2 Template:VersionMinus
+ 13.32%    1.446      1 Template:MenuCommand
+ 13.11%    1.424      1 Template:Button
+ 12.80%    1.390      3 Template:Version
+ 11.14%    1.210      5 Template:Incode
+  8.93%    0.970      1 Template:Userdocnavi/gl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115173730 and revision id 1738969. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115173814 and revision id 1738971. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
