--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -43,7 +43,7 @@
 </p>
 <h3><span class="mw-headline" id="Actual">Actual</span></h3>
 <p>Os bancos de traballo que se listan a continuaci&oacute;n incl&uacute;ense con cada instalaci&oacute;n de FreeCAD.
-</p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: Alg&uacute;ns bancos de traballo que se usan con pouca frecuencia est&aacute;n desactivados por defecto. Est&aacute;n marcados por debaixo con: <code>D</code>. P&oacute;dese activar un banco de traballo desactivado en <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">Preferencias</a>. Os bancos de traballo desactivados a&iacute;nda se poden activar a trav&eacute;s de <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> do men&uacute; de <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
+</p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: Alg&uacute;ns bancos de traballo que se usan con pouca frecuencia est&aacute;n desactivados por defecto. Est&aacute;n marcados con <code>D</code>. P&oacute;dese activar un banco de traballo desactivado en <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">Preferencias</a>. Os bancos de traballo desactivados a&iacute;nda se poden activar a trav&eacute;s de <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> do men&uacute; de <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Std Base</a>. Este non &eacute; realmente un banco de traballo, sen&oacute;n unha categor&iacute;a de comandos e ferramentas "est&aacute;ndar" que se poden usar en todos os bancos de traballo.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> O <a href="../Assembly_Workbench.html" title="Assembly Workbench">Banco de traballo de montaxe</a> para constru&iacute;r e resolver ensamblaxes mec&aacute;nicas. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
@@ -90,12 +90,12 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115174806
+Cached time: 20260115174906
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.169 seconds
+CPU time usage: 0.095 seconds
+Real time usage: 0.130 seconds
 Preprocessor visited node count: 221/1000000
 Post&#8208;expand include size: 2305/2097152 bytes
 Template argument size: 414/2097152 bytes
@@ -106,17 +106,17 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.100      1 -total
- 31.36%    4.735      3 Template:Version
- 25.20%    3.806      2 Template:Docnav
-  9.06%    1.369      5 Template:Incode
-  8.61%    1.301      2 Template:VersionMinus
-  8.61%    1.300      1 Template:Button
-  6.62%    1.000      1 Template:MenuCommand
-  5.27%    0.796      1 Template:Userdocnavi/gl
+100.00%    7.838      1 -total
+ 22.63%    1.774      2 Template:Docnav
+ 13.20%    1.034      5 Template:Incode
+ 13.18%    1.033      3 Template:Version
+ 12.09%    0.948      1 Template:MenuCommand
+ 11.42%    0.895      2 Template:VersionMinus
+ 10.87%    0.852      1 Template:Button
+  7.20%    0.564      1 Template:Userdocnavi/gl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115174806 and revision id 1738989. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115174906 and revision id 1738991. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
