--- a/wiki/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/Macro_FCSpring_Helix_Variable.html
@@ -1,5 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCSpring Helix Variable</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+FCSpring+Helix+Variable&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FCFeder-Helix-Variable (95% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FCFeder-Helix-Variable (97% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCSpring Helix Variable (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="hr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCSpring Helix Variable (54% translated)" lang="hr" dir="ltr">hrvatski</a></li>
@@ -16,7 +16,7 @@ Macro FCSpring Helix Variable
 <th class="ctOdd">Description
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">This macro creates a spring with customizable, any turn may change the spring configuration can be saved in a file with the extension <b>.FCSpring</b> or coordinates <b>.FCSpringCoor</b>.<br>Are detected: Surface (Face direction), Cylinder (Radius), Ellipse (MinorRadius), Sphere (Radius), Toroid (Radius1), Plane (Direction), Line (follow the Direction ), Point (XYZ vertex position)<br>If no object is detected (not selection) the spring is created at the point XYZ 0., 0., 0.<br>See the <a rel="nofollow" class="external text" href="https://wiki.freecad.org/Macro_FCSpring_Helix_Variable#Examples">examples</a><br>
+<td class="ctEven left macro-description">This macro creates a spring with customizable, any turn may change the spring configuration can be saved in a file with the extension <b>.FCSpring</b> or coordinates <b>.FCSpringCoor</b>.<br>Are detected: Surface (Face direction), Cylinder (Radius), Ellipse (MinorRadius), Sphere (Radius), Toroid (Radius1), Plane (Direction), Line (follow the Direction), Point (XYZ vertex position)<br>If no object is detected (not selection) the spring is created at the point XYZ 0., 0., 0.<br>See the <a rel="nofollow" class="external text" href="https://wiki.freecad.org/Macro_FCSpring_Helix_Variable#Examples">examples</a><br>
 <p><br>
 Download <a rel="nofollow" class="external text" href="https://forum.freecad.org/download/file.php?id=80844">the Icons</a> in .zip file<br><br>Macro version: 01.19<br>Last modified: 2024/07/11<br>FreeCAD version: 0.19 and above<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/6/69/FCSpring_Helix_Variable.png">ToolBar Icon</a><br>Author: Mario52<br>
 </p>
@@ -77,7 +77,7 @@ Download <a rel="nofollow" class="external text" href="https://forum.freecad.org
 </td></tr>
 </tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>This macro creates a spring highly customizable. Any modification changing the spring configuration can be saved in a file with the extension .FCSpring or coordinates .FCSpringCoor<br>Are detected: Surface (Face direction), Cylinder (Radius), Ellipse (MinorRadius), Sphere (Radius), Toroid (Radius1), Plane (Direction), Line (follow the Direction ), Point (XYZ vertex position)<br>If no object is detected (not selection) the spring is created at the point XYZ 0., 0., 0.
+<p>This macro creates a spring highly customizable. Any modification changing the spring configuration can be saved in a file with the extension .FCSpring or coordinates .FCSpringCoor<br>Are detected: Surface (Face direction), Cylinder (Radius), Ellipse (MinorRadius), Sphere (Radius), Toroid (Radius1), Plane (Direction), Line (follow the Direction), Point (XYZ vertex position)<br>If no object is detected (not selection) the spring is created at the point XYZ 0., 0., 0.
 </p>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3a/raw/91cbf54580d8af331f9b371f4951a40b9ef506f3/Macro_FCSpring_Helix_Variable.FCMacro">Macro</a></i>
@@ -151,7 +151,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3
 </p><p>Detection&nbsp;: Cylinder (radius), Sphere (radius), Toroid (radius) , Cone (little radius), Circle (radius), Arc (radius), Ellipse (little radius)
 </p>
 <ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Normal</span>&nbsp;: If one circle is selected <b>Normal</b> not modify the radius of circle (Default)
-<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Adapt Rad.</span>&nbsp;: If the button <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Normal</span>' is pressed, the button change to <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Adapt Rad.</span> the spring is adapted to the detected radius (If a radius is detected )</li></ul></li>
+<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Adapt Rad.</span>&nbsp;: If the button <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Normal</span>' is pressed, the button change to <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Adapt Rad.</span> the spring is adapted to the detected radius (If a radius is detected)</li></ul></li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Point Mouse</span>&nbsp;: If the click mouse is on one face the spring is created on this point (Default)
 <ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Center Face</span>&nbsp;: If the button <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Point Mouse</span> is pressed, the button change to <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Center Face</span>, the spring is created on the center face selected</li></ul></li>
 <li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Position<span></span></span> <b>Position</b>&nbsp;: If two object are selected (First axis, Second the spring (or other object)), this checkBox is enabled and you can modify the placement object 2 (spring) along the on object 1 (axis), if this <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="index.php?title=CheckBoxTrue.svg&amp;filetimestamp=20200323161507&amp;.html" class="mw-file-description"><img src="File/CheckBoxTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Position<span></span></span> is checked the "Position" option is enabled for use</li>
@@ -466,15 +466,15 @@ ToolBar button </p><figure class="mw-default-size mw-halign-left" typeof="mw:Fil
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116043358
+Cached time: 20260116044716
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.169 seconds
-Real time usage: 0.190 seconds
+CPU time usage: 0.195 seconds
+Real time usage: 0.212 seconds
 Preprocessor visited node count: 1022/1000000
-Post&#8208;expand include size: 24425/2097152 bytes
-Template argument size: 4567/2097152 bytes
+Post&#8208;expand include size: 24424/2097152 bytes
+Template argument size: 4566/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 6/100
 Unstrip recursion depth: 0/20
@@ -482,19 +482,19 @@ Unstrip post&#8208;expand size: 28475/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   52.780      1 -total
-  4.71%    2.483     12 Template:SpinBox
-  4.61%    2.431      6 Template:Code
-  3.80%    2.007      1 Template:Macro
-  3.32%    1.753      8 Template:CheckBox
-  2.64%    1.395     25 Template:Button
-  2.23%    1.177      2 Template:RadioButton
-  1.78%    0.940      1 Template:Codeextralink
-  1.69%    0.891     14 Template:Clear
-  1.61%    0.849      1 Template:KEY
+100.00%   67.764      1 -total
+  5.96%    4.036      6 Template:Code
+  3.11%    2.107      1 Template:Codeextralink
+  2.93%    1.986      8 Template:CheckBox
+  2.68%    1.817     12 Template:SpinBox
+  2.59%    1.757      1 Template:Macro
+  2.20%    1.494      1 Template:Caption
+  2.06%    1.399     25 Template:Button
+  1.83%    1.242      2 Template:RadioButton
+  1.69%    1.147     14 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:48184-0!canonical and timestamp 20260116043416 and revision id 1739016. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:48184-0!canonical and timestamp 20260116044730 and revision id 1739021. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
